--- a/DemoWeb2/Views/Cart/HoanThanhDonHang.cshtml
+++ b/DemoWeb2/Views/Cart/HoanThanhDonHang.cshtml
@@ -7,7 +7,7 @@
 <div class="container-fluid mb-5">
     <div class="row border-top px-xl-5">
         <div class="col-lg-3 d-none d-lg-block">
-            <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" data-toggle="collapse" href="#navbar-vertical" style="height: 65px; margin-top: -1px; padding: 0 30px;">
+            <a class="btn shadow-none d-flex align-items-center justify-content-between text-white w-100" data-toggle="collapse" href="#navbar-vertical" style="height: 65px; margin-top: -1px; padding: 0 30px; background-color: #33CCFF; ">
                 <h6 class="m-0">Danh mục sản phẩm</h6>
                 <i class="fa fa-angle-down text-dark"></i>
             </a>
@@ -16,7 +16,7 @@
         <div class="col-lg-9">
             <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
                 <a href="" class="text-decoration-none d-block d-lg-none">
-                    <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">E</span>Shopper</h1>
+                    <h1 class="m-0 display-5 font-weight-semi-bold"><span class=" font-weight-bold border px-3 mr-1" style="color:#00FFFF;">N</span>Shopping</h1>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -24,20 +24,30 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav mr-auto py-0">
                         <a class="nav-link" href="~/CustomerProduct">Trang chủ</a>
-                        <a class="nav-link" href="~/Categories"> Danh mục</a>
-                        <a class="nav-link" href="~/Products"> Sản phẩm</a>
+                        <a class="nav-link" href="~/Admin/Login">Quản lý</a>
+                        <a class="nav-link" href="~/CustomerProduct/Shop">Mua sắm</a>
                         <a class="nav-link" href="~/CustomerProduct/Contact">Liên hệ</a>
                     </div>
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="~/Users/Login" class="nav-item nav-link">Đăng nhập</a>
-                        <a href="~/Users/Register" class="nav-item nav-link">Đăng ký</a>
+                        @if (Session["TaiKhoan"] != null)
+                        {
+                            var taiKhoan = (DemoWeb2.Models.Customer)Session["TaiKhoan"];
+                            <p class="nav-item nav-link">Hello @taiKhoan.NameCus</p>
+                            <a href="~/Users/Logout" class="nav-item nav-link">Đăng xuất</a>
+                        }
+                        else
+                        {
+                            <a href="~/Users/Login" class="nav-item nav-link">Đăng nhập</a>
+                            <a href="~/Users/Register" class="nav-item nav-link">Đăng ký</a>
+                        }
                     </div>
+
                 </div>
             </nav>
             <div style="text-align:center; margin-top:75px">
                 <h2>ĐƠN HÀNG CỦA QUÝ KHÁCH ĐÃ ĐƯỢC GHI NHẬN. CHÚNG TÔI SẼ LIÊN HỆ TRONG THỜI GIAN SỚM NHẤT</h2>
                 <p>
-                    @Html.ActionLink("Về trang chủ", "Index", "CustomerProduct", null, new {@class = "btn btn-primary"})
+                    @Html.ActionLink("Về trang chủ", "Index", "CustomerProduct", null, new { @class = "btn btn-primary", style = "background-color: #33CCFF; border: none;" })
                 </p>
             </div>
         </div>
