--- a/DemoWeb2/Views/Customers/Index.cshtml
+++ b/DemoWeb2/Views/Customers/Index.cshtml
@@ -4,49 +4,60 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout1.cshtml";
 }
+<div style="margin: 10px auto; width: 90%;">
+    <h2 style="text-align: center">THÔNG TIN CUSTOMER</h2>
 
-<h2>Index</h2>
+    @*<p>
+        @Html.ActionLink("TẠO MỚI", "Create", null, new
+            {
+                @class = "btn btn-primary"
+            })
+    </p>*@
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.NameCus)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PhoneCus)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EmailCus)
+            </th>
+            <th></th>
+        </tr>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.NameCus)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PhoneCus)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EmailCus)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PassCus)
-        </th>
-        <th></th>
-    </tr>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NameCus)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PhoneCus)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EmailCus)
+                </td>
+                @*<td>
+                    @Html.ActionLink("Sửa", "Edit", new
+                        {
+                            id =
+                       item.IDCus
+                        }, new { @class = "btn btn-success" })
+                    @Html.ActionLink("Chi tiết", "Details", new
+                    {
+                        id =
+                   item.IDCus
+                    }, new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Xóa", "Delete", new
+                    {
+                        id =
+                   item.IDCus
+                    }, new { @class = "btn btn-danger" })
+                </td>*@
+            </tr>
+        }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.NameCus)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PhoneCus)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EmailCus)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PassCus)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.IDCus }) |
-            @Html.ActionLink("Details", "Details", new { id=item.IDCus }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.IDCus })
-        </td>
-    </tr>
-}
-
-</table>
+    </table>
+</div>
