--- a/DemoWeb2/Views/Shared/_Layout1.cshtml
+++ b/DemoWeb2/Views/Shared/_Layout1.cshtml
@@ -177,7 +177,7 @@
             <!-- Brand Logo -->
             <a href="~/Content/admin/index3.html" class="brand-link">
                 <img src="~/Content/admin/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-                <span class="brand-text font-weight-light">Web bán Hàng</span>
+                <span class="brand-text font-weight-light">N Shopping</span>
             </a>
 
             <!-- Sidebar -->
@@ -188,7 +188,7 @@
                         <img src="~/Content/admin/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                        <a href="#" class="d-block">Alexander Pierce</a>
+                        <a href="#" class="d-block">Quản lý cửa hàng</a>
                     </div>
                 </div>
 
