--- a/DemoWeb2/Views/Products/Index.cshtml
+++ b/DemoWeb2/Views/Products/Index.cshtml
@@ -22,7 +22,7 @@
             <div class="col-md-8 offset-md-2">
                 <form action="simple-results.html">
                     <div class="input-group input-group-lg">
-                        @Html.TextBox("SearchString", ViewBag.CurrentFilter as string, new { @class = "form-control ", placeholder = "Type your keywords here", value = "Lorem ipsum" })
+                        @Html.TextBox("SearchString", ViewBag.CurrentFilter as string, new { @class = "form-control ", placeholder = "Nhập tên sản phẩm", value = "Lorem ipsum" })
                         @*<input type="search" class="form-control form-control-lg" placeholder="Type your keywords here" value="Lorem ipsum">*@
                         <div class="input-group-append">
                             <button type="submit" class="btn btn-default">
@@ -49,7 +49,7 @@
                 HÌNH
             </th>
             <th>
-                CATEGORY
+                DANH MỤC
             </th>
             <th></th>
         </tr>
