--- a/DemoWeb2/Views/OrderProes/Details.cshtml
+++ b/DemoWeb2/Views/OrderProes/Details.cshtml
@@ -1,32 +1,58 @@
-﻿
+﻿@model DemoWeb2.Models.OrderPro
+
 @{
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout1.cshtml";
 }
 
-@model List<DemoWeb2.Models.OrderDetail>
+<h2>Details</h2>
 
-<h2>Order Details</h2>
+<div>
+    <h4>OrderPro</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.DateOrder)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.DateOrder)
+        </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.AddressDeliverry)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.AddressDeliverry)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Customer.NameCus)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Customer.NameCus)
+        </dd>
+    </dl>
+</div>
+
+<h4>Product List</h4>
+<hr />
 <table class="table">
-    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Price</th>
+        <!-- Các cột khác tùy thuộc vào thuộc tính của sản phẩm -->
+    </tr>
+    @foreach (var product in Model.Products)
+    {
         <tr>
-            <th>Product Name</th>
-            <th>Quantity</th>
-            <th>Unit Price</th>
+            <td>@product.NamePro</td>
+            <td>@product.Price</td>
+            <!-- Các cột khác tùy thuộc vào thuộc tính của sản phẩm -->
         </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@item.Product.NamePro</td>
-                <td>@item.Quantity</td>
-                <td>@item.UnitPrice</td>
-            </tr>
-        }
-    </tbody>
+    }
 </table>
+
 <p>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
