--- a/DemoWeb2/Views/OrderProes/Edit.cshtml
+++ b/DemoWeb2/Views/OrderProes/Edit.cshtml
@@ -4,51 +4,70 @@
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout1.cshtml";
 }
+<div style="margin: 10px auto; width: 70%;">
+    <h2>Edit</h2>
 
-<h2>Edit</h2>
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>OrderPro</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.ID)
+        <div class="form-horizontal">
+            <h4>OrderPro</h4>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.ID)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.DateOrder, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DateOrder, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DateOrder, "", new { @class = "text-danger" })
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.DateOrder)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.DateOrder)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.AddressDeliverry)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.AddressDeliverry)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Customer.NameCus)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Customer.NameCus)
+                </dd>
+            </dl>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.IDCus, "IDCus", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("IDCus", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IDCus, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                @for (int i = 0; i < Model.Products.Count; i++)
+                {
+                    <tr>
+                        <td>@Html.DisplayFor(m => m.Products[i].NamePro)</td>
+                        <td>@Html.DisplayFor(m => m.Products[i].Price)</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.AddressDeliverry, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.AddressDeliverry, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AddressDeliverry, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
+    <div>
+        @Html.ActionLink("Back to List", "Index")
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
