--- a/DemoWeb2/Views/OrderProes/Index.cshtml
+++ b/DemoWeb2/Views/OrderProes/Index.cshtml
@@ -7,23 +7,16 @@
 }
 <div style="margin: 10px auto; width: 90%;">
     <h2 style="text-align: center">THÔNG TIN ORDERS</h2>
-
-    <p>
-        @Html.ActionLink("TẠO MỚI", "Create", null, new
-        {
-            @class = "btn btn-primary"
-        })
-    </p>
-    <table class="table">
+    <table class="table" style="margin-top: 20px">
         <tr>
             <th>
-                NGÀY ORDER
+                NGÀY ĐẶT
             </th>
             <th>
-                ĐỊA CHỈ THANH TOÁN
+                ĐỊA CHỈ GIAO HÀNG
             </th>
             <th>
-                TÊN KHÁCH HÀNG
+                TÀI KHOẢN
             </th>
             <th></th>
         </tr>
@@ -42,15 +35,20 @@
                 </td>
                 <td>
                     @Html.ActionLink("Sửa", "Edit", new
-                        {
-                            id =
-                       item.ID
-                        }, new { @class = "btn btn-success" })
+                   {
+                       id =
+                  item.ID
+                   }, new { @class = "btn btn-success" })
                     @Html.ActionLink("Chi tiết", "Details", new
                     {
                         id =
                    item.ID
                     }, new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Xóa", "Delete", new
+                    {
+                        id =
+                   item.ID
+                    }, new { @class = "btn btn-danger" })
                 </td>
             </tr>
         }
