--- a/DemoWeb2/Views/Categories/Details.cshtml
+++ b/DemoWeb2/Views/Categories/Details.cshtml
@@ -25,11 +25,11 @@
         </dl>
     </div>
     <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new
+        @Html.ActionLink("SỬA", "Edit", new { id = Model.Id }, new
         {
        @class = "btn btn-success"
         }) |
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("TRỞ LẠI", "Index")
     </p>
 </div>
 
