--- a/DemoWeb2/Views/Customers/Details.cshtml
+++ b/DemoWeb2/Views/Customers/Details.cshtml
@@ -5,47 +5,50 @@
     Layout = "~/Views/Shared/_Layout1.cshtml";
 }
 
-<h2>Details</h2>
+<div style="margin: 10px auto; width: 70%;">
+    <h2 class="text-center">CHI TIẾT KHÁCH HÀNG</h2>
+    <div>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.NameCus)
+            </dt>
 
-<div>
-    <h4>Customer</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.NameCus)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.NameCus)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.NameCus)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.PhoneCus)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.PhoneCus)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.PhoneCus)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.PhoneCus)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.EmailCus)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EmailCus)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.EmailCus)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EmailCus)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.PassCus)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.PassCus)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.PassCus)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.PassCus)
-        </dd>
-
-    </dl>
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("SỬA", "Edit", new { id = Model.IDCus }, new
+        {
+       @class = "btn btn-success"
+        }) 
+        @Html.ActionLink("TRỞ LẠI", "Index")
+    </p>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.IDCus }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
