--- a/DemoWeb2/Views/Products/Delete.cshtml
+++ b/DemoWeb2/Views/Products/Delete.cshtml
@@ -45,7 +45,7 @@
         {
             @Html.AntiForgeryToken()
             <div class="form-actions no-color">
-                <input type="submit" value="Xóa" class="btn btn-danger" /> |
+                <input type="submit" value="XÓA" class="btn btn-danger" /> 
                 @Html.ActionLink("TRỞ LẠI", "Index")
             </div>
         }
