--- a/DemoWeb2/Views/Products/Details.cshtml
+++ b/DemoWeb2/Views/Products/Details.cshtml
@@ -39,11 +39,11 @@
                 </tbody>
             </table>
             <p>
-                @Html.ActionLink("Edit", "Edit", new { id = Model.ProductID }, new
+                @Html.ActionLink("SỬA", "Edit", new { id = Model.ProductID }, new
                 {
                     @class = "btn btn-success"
                 })
-                @Html.ActionLink("Back to List", "Index")
+                @Html.ActionLink("TRỞ LẠI", "Index")
             </p>
         </div>
     </div>
