--- a/DemoWeb2/Views/OrderProes/Delete.cshtml
+++ b/DemoWeb2/Views/OrderProes/Delete.cshtml
@@ -4,46 +4,45 @@
     ViewBag.Title = "Delete";
     Layout = "~/Views/Shared/_Layout1.cshtml";
 }
+<div style="margin: 10px auto; width: 70%;">
+    <h3 style="text-align:center; color:red; font-weight:600">BẠN CÓ CHẮC CHẮN MUỐN XÓA ORDER NÀY KHÔNG</h3>
+    <div>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.DateOrder)
+            </dt>
 
-<h2>Delete</h2>
+            <dd>
+                @Html.DisplayFor(model => model.DateOrder)
+            </dd>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>OrderPro</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.DateOrder)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.AddressDeliverry)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.DateOrder)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.AddressDeliverry)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.AddressDeliverry)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Customer.NameCus)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.AddressDeliverry)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Customer.NameCus)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Customer.NameCus)
-        </dt>
+        </dl>
 
-        <dd>
-            @Html.DisplayFor(model => model.Customer.NameCus)
-        </dd>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+            <div class="form-actions no-color">
+                <input type="submit" value="XÓA" class="btn btn-danger" /> 
+                @Html.ActionLink("TRỞ LẠI", "Index")
+            </div>
+        }
+    </div>
 </div>
