--- a/DemoWeb2/Views/OrderProes/Edit.cshtml
+++ b/DemoWeb2/Views/OrderProes/Edit.cshtml
@@ -5,54 +5,62 @@
     Layout = "~/Views/Shared/_Layout1.cshtml";
 }
 <div style="margin: 10px auto; width: 70%;">
-    <h2>Edit</h2>
+    <h2 class="text-center">CHỈNH SỬA ORDER</h2>
 
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
-            <h4>OrderPro</h4>
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.ID)
+<div class="form-horizontal">
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.ID)
 
-            <dl class="dl-horizontal">
-                <dt>
-                    @Html.DisplayNameFor(model => model.DateOrder)
-                </dt>
-                <dd>
-                    @Html.DisplayFor(model => model.DateOrder)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.AddressDeliverry)
-                </dt>
-                <dd>
-                    @Html.DisplayFor(model => model.AddressDeliverry)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.Customer.NameCus)
-                </dt>
-                <dd>
-                    @Html.DisplayFor(model => model.Customer.NameCus)
-                </dd>
-            </dl>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Save" class="btn btn-default" />
-                </div>
-            </div>
+    <div class="form-group" style="font-weight:600">
+        NGÀY ĐẶT
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.DateOrder, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.DateOrder, "", new { @class = "text-danger" })
         </div>
+    </div>
 
+    <div class="form-group" style="font-weight:600">
+        KHÁCH HÀNG
+        <div class="col-md-10">
+            @if (ViewBag.CustomerList is SelectList)
+            {
+                @Html.DropDownListFor(model => model.IDCus, (SelectList)ViewBag.CustomerList, "-- Select Customer --", new { @class = "form-control" })
+            }
+            else
+            {
+                @Html.DropDownListFor(model => model.IDCus, new SelectList(new List<SelectListItem>()), "-- Select Customer --", new { @class = "form-control" })
+            }
+            @Html.ValidationMessageFor(model => model.IDCus, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+
+
+    <div class="form-group" style="font-weight:600">
+        ĐỊA CHỈ GIAO HÀNG
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.AddressDeliverry, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.AddressDeliverry, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="LƯU" class="btn btn-success" />
+        </div>
+    </div>
+</div>
         <table class="table">
             <thead>
                 <tr>
-                    <th>Name</th>
-                    <th>Price</th>
-                    <th>Action</th>
+                    <th>Tên sản phẩm</th>
+                    <th>Sản phẩm</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
@@ -68,6 +76,6 @@
     }
 
     <div>
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("TRỞ LẠI", "Index")
     </div>
 </div>
