--- a/DemoWeb2/Views/CustomerProduct/Index.cshtml
+++ b/DemoWeb2/Views/CustomerProduct/Index.cshtml
@@ -50,9 +50,9 @@
                         <img class="img-fluid" src="~/Content/img/slide_index_1.jpg" alt="Image">
                         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                             <div class="p-3" style="max-width: 700px;">
-                                <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
-                                <h3 class="display-4 text-white font-weight-semi-bold mb-4">Fashionable Dress</h3>
-                                <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
+                                <h4 class="text-light text-uppercase font-weight-medium mb-3">Giảm 10% Cho Đơn Hàng Đầu Tiên</h4>
+                                <h3 class="display-4 text-white font-weight-semi-bold mb-4">Thời Trang Unisex</h3>
+                                <a href="~/CustomerProduct/Shop" class="btn btn-light py-2 px-3">Mua Ngay</a>
                             </div>
                         </div>
                     </div>
@@ -60,9 +60,9 @@
                         <img class="img-fluid" src="~/Content/img/slide_index_2.jpg" alt="Image">
                         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                             <div class="p-3" style="max-width: 700px;">
-                                <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
-                                <h3 class="display-4 text-white font-weight-semi-bold mb-4">Reasonable Price</h3>
-                                <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
+                                <h4 class="text-light text-uppercase font-weight-medium mb-3">Giảm 10% Cho Đơn Hàng Đầu Tiên</h4>
+                                <h3 class="display-4 text-white font-weight-semi-bold mb-4">Giá Cả Hợp Lý</h3>
+                                <a href="~/CustomerProduct/Shop" class="btn btn-light py-2 px-3">Mua Ngay</a>
                             </div>
                         </div>
                     </div>
@@ -119,9 +119,9 @@
             <div class="position-relative bg-secondary text-center text-md-right text-white mb-2 py-5 px-5">
                 <img src="~/Content/img/offer-1.png" alt="">
                 <div class="position-relative" style="z-index: 1;">
-                    <h5 class="text-uppercase mb-3" style="color: #33CCFF;">20% off the all order</h5>
+                    <h5 class="text-uppercase mb-3" style="color: #33CCFF;">Giảm 20% cho tất cả đơn hàng</h5>
                     <h1 class="mb-4 font-weight-semi-bold">Spring Collection</h1>
-                    <a href="" class="btn py-md-2 px-md-3" style="color: #33CCFF; border-color: #33CCFF; ">Shop Now</a>
+                    <a href="~/CustomerProduct/Shop" class="btn py-md-2 px-md-3" style="color: #33CCFF; border-color: #33CCFF; ">Mua Ngay</a>
                 </div>
             </div>
         </div>
@@ -129,9 +129,9 @@
             <div class="position-relative bg-secondary text-center text-md-left text-white mb-2 py-5 px-5">
                 <img src="~/Content/img/offer-2.png" alt="">
                 <div class="position-relative" style="z-index: 1;">
-                    <h5 class="text-uppercase mb-3"style="color: #33CCFF;">20% off the all order</h5>
+                    <h5 class="text-uppercase mb-3" style="color: #33CCFF;">Giảm 20% cho tất cả đơn hàng</h5>
                     <h1 class="mb-4 font-weight-semi-bold">Winter Collection</h1>
-                    <a href="" class="btn py-md-2 px-md-3" style="color: #33CCFF; border-color: #33CCFF; ">Shop Now</a>
+                    <a href="~/CustomerProduct/Shop" class="btn py-md-2 px-md-3" style="color: #33CCFF; border-color: #33CCFF; ">Mua Ngay</a>
                 </div>
             </div>
         </div>
@@ -167,6 +167,11 @@
                     </div>
                 </div>
             }
+            <div class="col-xs-12">
+                <div class="text-center">
+                    <a href="~/CustomerProduct/Shop" class="btn btn-view-more" style="color: #212529; background-color: #33CCFF; ">Xem tất cả</a>
+                </div>
+            </div>
         </div>
     </div>
     <!-- Products End -->
