--- a/DemoWeb2/Views/OrderProes/Index.cshtml
+++ b/DemoWeb2/Views/OrderProes/Index.cshtml
@@ -7,6 +7,13 @@
 }
 <div style="margin: 10px auto; width: 90%;">
     <h2 style="text-align: center">THÔNG TIN ORDERS</h2>
+    <p>
+        @Html.ActionLink("TẠO MỚI", "Create", null, new
+        {
+            @class = "btn btn-primary"
+        })
+    </p>
+
     <table class="table" style="margin-top: 20px">
         <tr>
             <th>
