--- a/DemoWeb2/Views/CustomerProduct/Shop.cshtml
+++ b/DemoWeb2/Views/CustomerProduct/Shop.cshtml
@@ -1,4 +1,4 @@
-﻿@*@model IEnumerable<DemoWeb2.Models.Product>*@
+﻿
 @using PagedList;
 @using PagedList.Mvc;
 @model PagedList.IPagedList<DemoWeb2.Models.Product>
@@ -198,6 +198,17 @@
                                 </div>
                             </div>
                         </form>
+                        <div class="dropdown ml-4">
+                            <button class="btn border dropdown-toggle" type="button" id="triggerId" data-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="false">
+                                Sort by
+                            </button>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="triggerId">
+                                <a class="dropdown-item" href="#">Latest</a>
+                                <a class="dropdown-item" href="#">Popularity</a>
+                                <a class="dropdown-item" href="#">Best Rating</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <!-- Products Start -->
