Chức năng Call trực tiếp

--- a/DemoWeb2/Views/Shared/_MasterLayout.cshtml
+++ b/DemoWeb2/Views/Shared/_MasterLayout.cshtml
@@ -9,7 +9,7 @@
     <link href="~/Content/css/style.css" rel="stylesheet">
 
     <!-- Favicon -->
-    <link href="~/Content/~/Content/img/favicon.ico" rel="icon">
+    <link href="~/Content/img/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -20,6 +20,9 @@
 
     <!-- Libraries Stylesheet -->
     <link href="~/Content/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+
+    <!--Call-->
+    <link href="~/Content/css/call.css" rel="stylesheet" />
 
 </head>
 <body>
@@ -82,7 +85,7 @@
                 <p>Dolore erat dolor sit lorem vero amet. Sed sit lorem magna, ipsum no sit erat lorem et magna ipsum dolore amet erat.</p>
                 <p class="mb-2"><i class="fa fa-map-marker-alt mr-3" style="color: #33CCFF;"></i>10 Quốc lộ 22, Tân Xuân, Hóc Môn, Thành phố Hồ Chí Minh </p>
                 <p class="mb-2"><i class="fa fa-envelope  mr-3" style="color: #33CCFF;"></i>20dh110764@st.huflit.edu.vn</p>
-                <p class="mb-0"><i class="fa fa-phone-alt  mr-3" style="color: #33CCFF;"></i>+012 345 67890</p>
+                <a class="text-dark mb-2" href="tel:+034404177"><i class="fa fa-phone-alt  mr-3" style="color: #33CCFF;"></i>+012 345 67890</a>
             </div>
             <div class="col-lg-8 col-md-12">
                 <div class="row">
@@ -139,6 +142,13 @@
     <a href="#" class="btn back-to-top" style="color: #212529; background-color: #33CCFF; border-color: #33CCFF; "><i class="fa fa-angle-double-up"></i></a>
     <div class="zalo-chat-widget" data-oaid="2314494191542853152" data-welcome-message="Rất vui khi được hỗ trợ bạn!" data-autopopup="0" data-width="300" data-height="300"> </div>
 
+    <section class="call-buton" id="callButton">
+        <a class="cc-calto-action-ripple" href="tel:0344049177">
+            <i class="fa fa-phone"></i><span class="num">0123.456.789</span>
+        </a>
+    </section>
+
+
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
@@ -152,5 +162,11 @@
     <!-- Template Javascript -->
     <script src="~/Content/js/main.js"></script>
     <script src="https://sp.zalo.me/plugins/sdk.js"></script>
+
+    <script>
+        document.getElementById("callButton").addEventListener("click", function () {
+            window.location.href = "tel:+0344049177";
+        });
+    </script>
 </body>
 </html>
