--- a/DemoWeb2/Views/Users/Register.cshtml
+++ b/DemoWeb2/Views/Users/Register.cshtml
@@ -1,24 +1,43 @@
 ﻿@{
     ViewBag.Title = "Register";
     Layout = "~/Views/Shared/_LayoutDetail.cshtml";
-
 }
-<link href="~/Content/css/login.css" rel="stylesheet" />
-<div class="signup-box" style="height: 550px; width:400px">
-    @using (Html.BeginForm("Register", "Users"))
+<link href="~/Content/css/formlogin.css" rel="stylesheet" />
+<div class="wrapper">
+    <h1>Đăng ký</h1>
+    @using (Html.BeginForm())
     {
         @Html.ValidationSummary(true)
-    <form class="form" id="a-form" action="">
-        <h2 class=" form_title title ">ĐĂNG KÝ</h2>
-        <input class="form__input" type="text" placeholder="Tên" name="NameCus" required />
-        <input class="form__input" style="margin-top: 20px" type="email" placeholder="Email" name="EmailCus" required />
-        <input class="form__input" style="margin-top: 20px" type="text" placeholder="Số điện thoại" name="PhoneCus" required>
-        <input class="form__input" style="margin-top: 20px" type="password" placeholder="Mật khẩu" name="PassCus" required>
-        <button class="form__button button submit" style="margin-left: 85px">ĐĂNG KÝ</button>
-    </form>
+        <div class="input-box">
+            <input type="text" placeholder="Username" name="NameCus" required>
+            <i class="fa-solid fa-user"></i>
+        </div>
+        <div class="input-box">
+            <input type="text" placeholder="Email" name="EmailCus" required>
+            <i class="fa-solid fa-envelope"></i>
+        </div>
+        <div class="input-box">
+            <input type="text" placeholder="Số điện thoại" name="PhoneCus" required>
+            <i class="fa-solid fa-phone"></i>
+        </div>
+        <div class="input-box">
+            <input type="password" placeholder="Mật khẩu" name="PassCus" required>
+            <i class="fa-solid fa-lock"></i>
+        </div>
+        <div class="remember-forgot">
+            <label>
+                <input type="checkbox">
+            </label>
+            <a href="#">Tôi đồng ý với các điều khoản & chính sách</a>
+        </div>
+        <button type="submit" class="btn">
+            Đăng ký
+        </button>
+        <div class="register-link">
+            <p>
+                Bạn đã có tài khoản?
+                <a href="@Url.Action("Login", "Users")">Đăng nhập</a>
+            </p>
+        </div>
     }
-    <p class="text-primary">
-        Bạn đã có tài khoản? <a href="~/Users/Login">Đăng nhập </a>
-    </p>
-
 </div>
